# WindowTidy

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
scripts/: dev-notes.md
src/windowtidy/: __init__.py  cli.py  config.py  geometry.py  presets.py
tests/: test_geometry.py
